ENH/MNT: Change from datetime formats to integer epochs
We have decided to move to epoch being defined as integer nanoseconds
since the J2000 EPOCH. This means that the epoch variable will be of
datatype int64 and the new conversion utility will convert MET in
seconds to j2000ns for users with a default reference epoch of
2010-01-01 per APL's documentation.

--- a/imap_processing/cdf/config/imap_hi_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_hi_variable_attrs.yaml
@@ -70,7 +70,7 @@ default_epoch: &default_epoch
   TIME_BASE: J2000
   TIME_SCALE: Terrestrial Time
   REFERENCE_POSITION: Rotating Earth Geoid
-  dtype: datetime64[ns]
+  dtype: int64
 
 # ------- L1A DE Section -------
 hi_de_ccsds_met:
