--- a/imap_processing/cdf/config/imap_hi_global_cdf_attrs.yaml
+++ b/imap_processing/cdf/config/imap_hi_global_cdf_attrs.yaml
@@ -20,6 +20,18 @@ imap_hi_l1a_de_attrs:
     Logical_source: imap_hi_l1a_{sensor}-de
     Logical_source_description: IMAP-Hi Instrument Level-1A Direct Event Data.
 
+imap_hi_l1a_hist_attrs:
+    Data_level: 1A
+    Data_type: L1A_HIST>Level-1A Histogram
+    Logical_source: imap_hi_l1a_{sensor}-hist
+    Logical_source_description: IMAP-Hi Instrument Level-1A Histogram Data.
+
+imap_hi_l1a_hk_attrs:
+    Data_level: 1A
+    Data_type: L1A_HK>Level-1A Housekeeping
+    Logical_source: imap_hi_l1a_{sensor}-hk
+    Logical_source_description: IMAP-Hi Instrument Level-1A Housekeeping Data.
+
 imap_hi_l1b_de_attrs:
     Data_level: 1B
     Data_type: L1B_DE>Level-1B Direct Event
