--- a/imap_processing/cdf/config/imap_hi_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_hi_variable_attrs.yaml
@@ -72,14 +72,31 @@ default_epoch: &default_epoch
   REFERENCE_POSITION: Rotating Earth Geoid
   dtype: int64
 
-# ------- L1A DE Section -------
-hi_de_ccsds_met:
+default_ccsds_met: &hi_ccsds_met
   <<: *default_uint32
   CATDESC: CCSDS mission elapsed time (MET). 32-bit integer value that represents the MET in seconds.
   FIELDNAM: Mission Elapsed Time(MET)
   LABLAXIS: CCSDS MET
   UNITS: sec
   VAR_TYPE: support_data
+
+hi_esa_stepping_num: &hi_esa_stepping_num
+  <<: *default_uint8
+  CATDESC: Zero based index indicates which row of onboard stepping table was used
+  FIELDNAM: ESA stepping number
+  FILLVAL: 255
+  FORMAT: I2
+  LABLAXIS: Stepping Num
+  VALIDMIN: 0
+  VALIDMAX: 16
+  VAR_NOTES: >
+    ESA (electrostatic analyzer) stepping number is 4-bit integer value that indicates
+    which row of the onboard stepping table was used to set voltages of the inner and
+    outer ESA surfaces.
+
+# ======= L1A DE Section =======
+hi_de_ccsds_met:
+  <<: *hi_ccsds_met
 
 hi_de_de_tag:
   <<: *default_uint16
@@ -92,18 +109,7 @@ hi_de_epoch:
   CATDESC: Direct Event time, number of nanoseconds since J2000 with leap seconds included
 
 hi_de_esa_stepping_num:
-  <<: *default_uint8
-  CATDESC: Zero based index indicates which row of onboard stepping table was used
-  FIELDNAM: ESA stepping number
-  FILLVAL: 255
-  FORMAT: I2
-  LABLAXIS: Stepping Num
-  VALIDMIN: 0
-  VALIDMAX: 16
-  VAR_NOTES: >
-    ESA (electrostatic analyzer) stepping number is 4-bit integer value that indicates
-    which row of the onboard stepping table was used to set voltages of the inner and
-    outter ESA surfaces.
+  <<: *hi_esa_stepping_num
 
 hi_de_event_met:
   <<: *default_uint64
@@ -171,7 +177,39 @@ hi_de_tof_3:
     Time of flight is 10-bit integer value that represents the time of flight of
     the direct event. 1023 is the value used to indicate no event was registered.
 
-# ------- L1B DE Section -------
+# ======= L1A HIST Section =======
+hi_hist_epoch:
+  <<: *default_epoch
+
+hi_hist_angle:
+  SCALE_TYPE: linear
+  CATDESC: Angle bin centers for histogram data.
+  FIELDNAM: ANGLE
+  FILLVAL: 65535
+  VALIDMIN: 0
+  VALIDMAX: 360
+  FORMAT: I3
+  UNITS: deg
+  LABLAXIS: ANGLE
+  VAR_TYPE: support_data
+  dtype: uint16
+
+hi_hist_ccsds_met:
+  <<: *hi_ccsds_met
+
+hi_hist_esa_stepping_num:
+  <<: *hi_esa_stepping_num
+
+hi_hist_counters:
+  <<: *default_uint16
+  CATDESC: Angular histogram of {counter_name} type events
+  FIELDNAM: "{counter_name} histogram"
+  VALIDMAX: 4095
+  DEPEND_1: angle
+  FORMAT: I4
+  LABLAXIS: "{counter_name}"
+
+# ======= L1B DE Section =======
 hi_de_coincidence_type:
   <<: *default_uint8
   CATDESC: Bitmap of detectors hit for Direct Event
@@ -278,7 +316,7 @@ hi_de_nominal_bin:
   VALIDMIN: 0
   VALIDMAX: 89
 
-# ------- L1C PSET Section -------
+# ======= L1C PSET Section =======
 hi_pset_epoch:
   <<: *default_epoch
 
