--- a/pyproject.toml
+++ b/pyproject.toml
@@ -92,6 +92,7 @@ convention = "numpy"
 
 [tool.poetry.scripts]
 imap_cli = 'imap_processing.cli:main'
+imap_xtce = 'tools.xtce_generation.xtce_generator_template:main'
 
 [tool.codespell]
 ignore-words-list = "livetime"
