Update l1a processing to use cdf attribute manager to pull attributes from new yaml file

--- a/imap_processing/cdf/config/imap_hit_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_hit_l1a_variable_attrs.yaml
@@ -37,7 +37,10 @@ epoch:
   REFERENCE_POSITION: Rotating Earth Geoid
 
 adc_channels:   # adc_channels is a dependency for leak_i data variable
-  <<: *support_default
+  DISPLAY_TYPE: no_plot
+  FILLVAL: -9223372036854775808
+  UNITS: ' '
+  SCALETYP: linear
   VALIDMIN: 0
   VALIDMAX: 63
   VAR_TYPE: metadata
@@ -244,12 +247,12 @@ spin_period_long:
 
 leak_i:
   <<: *support_default
-  depend_1: adc_channels
+  DEPEND_1: adc_channels
   CATDESC: Leakage Current [I]
   FIELDNAM: Leakage Current [I]
   LABLAXIS: Current I
   labl_ptr: adc_channels
-  FORMAT: I19",
+  FORMAT: I19
 
 phasic_stat:
   <<: *support_default
@@ -303,7 +306,7 @@ dac1_enable:
 # TODO consider making another default entry for the following variables since they
 #  all have the same max and format. Need more info from Eric
 
-preamp_l234a":
+preamp_l234a:
   <<: *default
   VALIDMAX: 4095
   CATDESC: Preamp L234A
