Add adc_channels_label attribute needed for the leak_i variable LABEL_PTR field. Add cdf.rst file to docs to fix sphinx error finding the ImapCdfAttributes() class

--- a/imap_processing/cdf/config/imap_hit_l1a_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_hit_l1a_variable_attrs.yaml
@@ -49,6 +49,15 @@ adc_channels:   # adc_channels is a dependency for leak_i data variable
   LABLAXIS: Channel
   FORMAT: I2
 
+# <=== Label Attributes ===>
+# LABL_PTR_i expects VAR_TYPE of metadata with char data type
+
+adc_channels_label:
+  CATDESC: Analog Digital Converter Channels
+  FIELDNAM: ADC Channels
+  FORMAT: A2
+  VAR_TYPE: metadata
+
 
 # <=== Data Variable Attributes ===>
 #TODO is DEPEND_0 needed for no_plot variables in housekeeping?
@@ -251,7 +260,7 @@ leak_i:
   CATDESC: Leakage Current [I]
   FIELDNAM: Leakage Current [I]
   LABLAXIS: Current I
-  labl_ptr: adc_channels
+  LABEL_PTR_1: adc_channels_label
   FORMAT: I19
 
 phasic_stat:
