--- a/imap_processing/cdf/config/imap_ultra_l1b_variable_attrs.yaml
+++ b/imap_processing/cdf/config/imap_ultra_l1b_variable_attrs.yaml
@@ -26,95 +26,104 @@ x_front:
   CATDESC: x front position
   FIELDNAM: Event x-position on front foil
   LABLAXIS: x front position
-  # TODO: come back to format
-  UNITS: mm
+  VALIDMIN: -1e6
+  FORMAT: F12.6
+  UNITS: hundredths of a millimeter
 
 y_front:
   <<: *default
   CATDESC: y front position
   FIELDNAM: Event y-position on front foil
   LABLAXIS: y front position
-  # TODO: come back to format
-  UNITS: mm
+  VALIDMIN: -1e6
+  FORMAT: F12.6
+  UNITS: hundredths of a millimeter
 
 x_back:
   <<: *default
   CATDESC: x back position
   FIELDNAM: x_back
   LABLAXIS: x back position
-  # TODO: come back to format
-  UNITS: mm
+  VALIDMIN: -1e6
+  FORMAT: F12.6
+  UNITS: hundredths of a millimeter
 
 y_back:
   <<: *default
   CATDESC: y back position
   FIELDNAM: y_back
   LABLAXIS: y back position
-  # TODO: come back to format
-  UNITS: mm
+  VALIDMIN: -1e6
+  FORMAT: F12.6
+  UNITS: hundredths of a millimeter
 
 x_coin:
   <<: *default
   CATDESC: x coincidence position
   FIELDNAM: x_coin
   LABLAXIS: x coincidence position
-  # TODO: come back to format
-  UNITS: mm
+  VALIDMIN: -1e6
+  FORMAT: F12.6
+  UNITS: hundredths of a millimeter
 
 tof_start_stop:
   <<: *default
   CATDESC: Particle time of flight from start to stop
   FIELDNAM: tof_start_stop
   LABLAXIS: tof start stop
-  # TODO: come back to format
-  UNITS: ns
+  VALIDMIN: -1e6
+  FORMAT: F12.6
+  UNITS: tenths of a nanosecond
 
 tof_stop_coin:
   <<: *default
   CATDESC: Particle time of flight from stop to coincidence
   FIELDNAM: tof_stop_coin
   LABLAXIS: tof stop coin
-  # TODO: come back to format
-  UNITS: ns
+  VALIDMIN: -1e6
+  FORMAT: F12.6
+  UNITS: tenths of a nanosecond
 
 tof_corrected:
   <<: *default
   CATDESC: Corrected time of flight
   FIELDNAM: tof_corrected
   LABLAXIS: tof corrected
-  # TODO: come back to format
-  UNITS: ns
+  VALIDMIN: -1e6
+  FORMAT: F12.6
+  UNITS: tenths of a nanosecond
 
-eventtype:
+event_type:
   <<: *default
+  VALIDMAX: 15
   CATDESC: Eventtype (1-2 top and bottom stop types; 8-15 ssd stop types)
-  FIELDNAM: eventtype
-  LABLAXIS: eventtype
-  # TODO: come back to format
-  UNITS: " "
+  FIELDNAM: Event type
+  FORMAT: I2
+  LABLAXIS: event type
 
-cointype:
+coincidence_type:
   <<: *default
-  CATDESC: Cointype (1-top; 2-bottom)
-  FIELDNAM: cointype
-  LABLAXIS: cointype
-  # TODO: come back to format
-  UNITS: " "
+  VALIDMAX: 2
+  CATDESC: Coincidence type for the direct event (1-2 top and bottom)
+  FIELDNAM: Coincidence type
+  FORMAT: I1
+  LABLAXIS: coincidence type
 
-starttype:
+start_type:
   <<: *default
-  CATDESC: Starttype (1-left; 2-right)
-  FIELDNAM: starttype
-  LABLAXIS: starttype
-  # TODO: come back to format
-  UNITS: " "
+  VALIDMAX: 2
+  CATDESC: Start type for the direct event (1-2 left and right)
+  FIELDNAM: Start type
+  FORMAT: I1
+  LABLAXIS: start type
 
 vx_ultra:
   <<: *default
   CATDESC: Normalized component of the velocity vector in x direction in the instrument frame.
   FIELDNAM: vx_ultra
   LABLAXIS: vx ultra
-  # TODO: come back to format
+  VALIDMIN: -1e6
+  FORMAT: F12.6
   UNITS: " "
 
 vy_ultra:
@@ -122,7 +131,8 @@ vy_ultra:
   CATDESC: Normalized component of the velocity vector in y direction in the instrument frame.
   FIELDNAM: vy_ultra
   LABLAXIS: vy ultra
-  # TODO: come back to format
+  VALIDMIN: -1e6
+  FORMAT: F12.6
   UNITS: " "
 
 vz_ultra:
@@ -130,7 +140,8 @@ vz_ultra:
   CATDESC: Normalized component of the velocity vector in z direction in the instrument frame.
   FIELDNAM: vz_ultra
   LABLAXIS: vz ultra
-  # TODO: come back to format
+  VALIDMIN: -1e6
+  FORMAT: F12.6
   UNITS: " "
 
 energy:
@@ -138,33 +149,33 @@ energy:
   CATDESC: Energy measured using the pulse height from the stop anode (DN) or Energy measured using the SSD (keV) depending on eventtype.
   FIELDNAM: energy
   LABLAXIS: energy
-  # TODO: come back to format
+  VALIDMIN: -1e6
+  FORMAT: F12.6
   UNITS: keV
 
 species:
   <<: *default
-  CATDESC: Species bin.
+  CATDESC: Species bin (0-255).
   FIELDNAM: species
   LABLAXIS: species
-  # TODO: come back to format
+  FORMAT: I2
   UNITS: " "
-
 
 front_back_distance:
   <<: *default
-  CATDESC: Distance front to back in hundredths of a millimeter.
+  CATDESC: Distance front to back.
   FIELDNAM: front_back_distance
   LABLAXIS: front_back_distance
-  # TODO: come back to format
-  UNITS: " "
+  FORMAT: F12.6
+  UNITS: hundredths of a millimeter
 
 path_length:
   <<: *default
-  CATDESC: Path length in hundredths of a millimeter.
+  CATDESC: Path length.
   FIELDNAM: path_length
   LABLAXIS: path_length
-  # TODO: come back to format
-  UNITS: " "
+  FORMAT: F12.6
+  UNITS: hundredths of a millimeter
 
 event_efficiency:
   <<: *default
@@ -251,8 +262,17 @@ eventtimes:
   CATDESC: Event times calculated from event and universal spin table.
   FIELDNAM: eventtimes
   LABLAXIS: event times
-  # TODO: come back to format
-  UNITS: " "
+  FORMAT: F20.6
+  UNITS: seconds
+
+de_event_met:
+  <<: *default
+  CATDESC: Mission Elapsed Time (MET) of Direct Event
+  DISPLAY_TYPE: no_plot
+  FIELDNAM: Mission Elapsed Time
+  LABLAXIS: DE MET
+  FORMAT: I20
+  UNITS: seconds
 
 spin_number:
   <<: *default
