--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,4 +119,5 @@ exclude = ['__init__' ] # don't report on objects that match any of these regex
 
 [tool.mypy]
 follow_imports = 'skip'
-exclude = ["tests", "docs", "imap_processing"]
+exclude = ["tests", "docs", "ultra", "swe", "swapi", "mag", "lo", "idex", "ialirt", "hit", "hi", "glows", "codice" ]
+
