--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,4 +119,4 @@ exclude = ['__init__' ] # don't report on objects that match any of these regex
 
 [tool.mypy]
 follow_imports = 'skip'
-exclude = ["tests", "docs", "codice" ]
+exclude = ["tests", "docs"]
